# cv-job-matcher

./: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
output/: job_search_report.md
src/cv_job_matching_system/: api.py  crew.py  main.py
src/cv_job_matching_system/config/: agents.yaml  tasks.yaml
src/cv_job_matching_system/tools/: job_search_tool.py  recruiter_finder_tool.py
static/: index.html
